--- a/index.html
+++ b/index.html
@@ -11,21 +11,16 @@
         <div class="banners" ></div>
         <div class="content">
 
-            <div class="login">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
-                </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+            <div class="login container">
+                a
             </div>
 
-            <div class="requet-pass" style="display:none">
-
+            <div class="requet-pass container" style="display:none">
+                b
             </div>
 
-            <div class="sign-up" style="display:none">
-
+            <div class="sign-up container" style="display:none">
+                c
             </div>
             
         </div>
